# compilers-and-interpreters

./: .gitignore
compilador/: CMakeLists.txt  lexer.c  lexer.h  main.c  token.c  token.h
compilador/include/: lexer.h  token.h
compilador/src/: lexer.c  main.c  token.c
compilador/test/: CMakeLists.txt  lexer_test.c
syntax_directed_parser/: dune-project  syntax_directed_parser.opam
syntax_directed_parser/lib/: comparison_operator.ml  comparison_operator.mli  dune  lexer.ml  lexer.mli  operator.ml  operator.mli  symbol.ml  symbol.mli  token.ml  token.mli
syntax_directed_parser/test/: dune  lexer_test.ml
syntax_directed_parser/test/testfiles/: digits  dragon_book_ex1  dragon_book_ex1_comment  forloop  forloop_comment  just_comparison_ops
