(lang dune 3.16)

(name syntax_directed_parser)

(generate_opam_files true)

(source
 (github scarpart/compilers-and-interpreters))

(authors "scarpart")

(maintainers "scarpart")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name syntax_directed_parser)
 (synopsis "Syntax-directed parser as presented in the Dragon Book, with my own twists.")
 (description "Syntax-directed parser written in OCaml for learning purposes and for the sake of having fun.")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
